Fixed CustomNetwork- every instance of of the activation function we left as ReLU. Replaced with self.activation function now.
Added some comments on load/save by removing the monitor.

Added some comments on file naming conventions for my automated model creation.

--- a/Testing automated model creation.ipynb
+++ b/Testing automated model creation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e4461c77",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,10 @@
     "}\n",
     "\n",
     "create_model(env_dict, \"DQN\", [64, 64], nn.ReLU, 20000)\n",
-    "\n"
+    "\n",
+    "# maybe add option to manually pass in a name \n",
+    "# include info about what is changing / travel time for next iteration\n",
+    "# include trial number "
    ]
   },
   {
